@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2015 THALES GLOBAL SERVICES.
+ * Copyright (c) 2006, 2016 THALES GLOBAL SERVICES.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -17,8 +17,8 @@ import java.util.Map;
 
 import org.eclipse.emf.common.notify.Notification;
 import org.eclipse.emf.common.util.URI;
+import org.eclipse.emf.ecore.EAttribute;
 import org.eclipse.emf.ecore.EObject;
-import org.eclipse.emf.ecore.resource.Resource;
 import org.eclipse.emf.ecore.xmi.XMLHelper;
 import org.eclipse.emf.ecore.xmi.XMLLoad;
 import org.eclipse.emf.ecore.xmi.XMLParserPool;
@@ -41,159 +41,167 @@ import org.polarsys.kitalpha.emde.xmi.XMIExtensionLoadImpl;
  */
 public class CapellacoreResourceImpl extends XMIResourceImpl {
 	/**
-	 * <!-- begin-user-doc -->
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * @generated
-	 */  
+   * @generated
+   */  
 	private List<Object> lookupTable = new ArrayList<Object>();
 	/**
-	 * <!-- begin-user-doc -->
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * @generated
-	 */  
+   * @generated
+   */  
 	private XMLParserPool parserPool = new XMLParserPoolImpl();
 	/**
-	 * <!-- begin-user-doc -->
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * @generated
-	 */  
+   * @generated
+   */  
 	private Map<Object, Object> nameToFeatureMap = new HashMap<Object, Object>();
 
 	/**
-	 * Creates an instance of the resource.
-	 * <!-- begin-user-doc -->
+   * Creates an instance of the resource.
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * @param uri the URI of the new resource.
-	 * @generated
-	 */
+   * @param uri the URI of the new resource.
+   * @generated
+   */
 	public CapellacoreResourceImpl(URI uri) {
-		super(uri);
-	}
+    super(uri);
+  }
 
 	/**
 	   * {@inheritDoc}
 	   * @generated
 	   */
 	  @Override
-	  protected void attachedHelper(EObject eObject_p) {
-	    // Make sure specified object has its id generated.
-	    if (eObject_p instanceof ModelElement) {
-	      setID(eObject_p, ((ModelElement) eObject_p).getId());
-	    }
-	    super.attachedHelper(eObject_p);
-	  }
+	  protected void attachedHelper(EObject eObject) {
+      // Make sure specified object has its id generated.
+      if (eObject instanceof ModelElement) {
+        setID(eObject, ((ModelElement) eObject).getId());
+      } else if (null != eObject && null != eObject.eClass()) {
+        EAttribute attribute = eObject.eClass().getEIDAttribute();
+        if (attribute != null) {
+          Object id = eObject.eGet(attribute);
+          if (id instanceof String) {
+            setID(eObject, (String)id);
+          }
+        }
+      }
+      super.attachedHelper(eObject);
+    }
 
 	/**
-	 * <!-- begin-user-doc -->
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * @generated
-	 */
+   * @generated
+   */
 	@Override
 	protected XMLSave createXMLSave() {
-		return new CapellaXMLSaveImpl(createXMLHelper());
-	}
+    return new CapellaXMLSaveImpl(createXMLHelper());
+  }
 
 	/**
-	 * <!-- begin-user-doc -->
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * @generated
-	 */
+   * @generated
+   */
 	@Override
 	protected XMLHelper createXMLHelper() {
-		return new XMIExtensionHelperImpl(this);	
-	}
+    return new XMIExtensionHelperImpl(this);	
+  }
 
 	/**
-	 * <!-- begin-user-doc -->
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * @generated
-	 */
+   * @generated
+   */
 	@Override
 	protected XMLLoad createXMLLoad() {
-		return new XMIExtensionLoadImpl((XMIExtensionHelperImpl) createXMLHelper());	
-	}
+    return new XMIExtensionLoadImpl((XMIExtensionHelperImpl) createXMLHelper());	
+  }
 
 	/**
-	 * <!-- begin-user-doc -->
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * @generated
-	 */
+   * @generated
+   */
 	@Override
 	protected void init() {
-		super.init();
+    super.init();
 
-		setTrackingModification(true);
-		// Save Options
-		getDefaultSaveOptions().put(XMLResource.OPTION_ENCODING, "UTF-8");  //$NON-NLS-1$
-		getDefaultSaveOptions().put(XMLResource.OPTION_CONFIGURATION_CACHE, Boolean.TRUE);
-		getDefaultSaveOptions().put(XMLResource.OPTION_USE_CACHED_LOOKUP_TABLE, lookupTable);    
-		getDefaultSaveOptions().put(XMLResource.OPTION_USE_ENCODED_ATTRIBUTE_STYLE, Boolean.TRUE);    
-		getDefaultSaveOptions().put(XMLResource.OPTION_SAVE_TYPE_INFORMATION, Boolean.TRUE);    
-		getDefaultSaveOptions().put(XMLResource.OPTION_LINE_WIDTH, new Integer(80));
-		getDefaultSaveOptions().put(XMLResource.OPTION_URI_HANDLER, new URIHandlerImpl.PlatformSchemeAware());		        
-		getDefaultSaveOptions().put(XMLResource.OPTION_FLUSH_THRESHOLD, Integer.valueOf(0x01000000));
-		getDefaultSaveOptions().put(XMLResource.OPTION_USE_FILE_BUFFER, Boolean.TRUE);
+    setTrackingModification(true);
+    // Save Options
+    getDefaultSaveOptions().put(XMLResource.OPTION_ENCODING, "UTF-8");  //$NON-NLS-1$
+    getDefaultSaveOptions().put(XMLResource.OPTION_CONFIGURATION_CACHE, Boolean.TRUE);
+    getDefaultSaveOptions().put(XMLResource.OPTION_USE_CACHED_LOOKUP_TABLE, lookupTable);    
+    getDefaultSaveOptions().put(XMLResource.OPTION_USE_ENCODED_ATTRIBUTE_STYLE, Boolean.TRUE);    
+    getDefaultSaveOptions().put(XMLResource.OPTION_SAVE_TYPE_INFORMATION, Boolean.TRUE);    
+    getDefaultSaveOptions().put(XMLResource.OPTION_LINE_WIDTH, new Integer(80));
+    getDefaultSaveOptions().put(XMLResource.OPTION_URI_HANDLER, new URIHandlerImpl.PlatformSchemeAware());		        
+    getDefaultSaveOptions().put(XMLResource.OPTION_FLUSH_THRESHOLD, Integer.valueOf(0x01000000));
+    getDefaultSaveOptions().put(XMLResource.OPTION_USE_FILE_BUFFER, Boolean.TRUE);
 
-		// Load Options
-		getDefaultLoadOptions().put(XMLResource.OPTION_DEFER_ATTACHMENT, Boolean.TRUE);
-		getDefaultLoadOptions().put(XMLResource.OPTION_DEFER_IDREF_RESOLUTION, Boolean.TRUE);
-		getDefaultLoadOptions().put(XMLResource.OPTION_USE_DEPRECATED_METHODS, Boolean.TRUE);
-		getDefaultLoadOptions().put(XMLResource.OPTION_USE_PARSER_POOL, parserPool);
-		getDefaultLoadOptions().put(XMLResource.OPTION_USE_XML_NAME_TO_FEATURE_MAP, nameToFeatureMap);
-		getDefaultLoadOptions().put(XMLResource.OPTION_USE_ENCODED_ATTRIBUTE_STYLE, Boolean.TRUE);
-		getDefaultLoadOptions().put(XMLResource.OPTION_RECORD_UNKNOWN_FEATURE, Boolean.TRUE);	}
+    // Load Options
+    getDefaultLoadOptions().put(XMLResource.OPTION_DEFER_ATTACHMENT, Boolean.TRUE);
+    getDefaultLoadOptions().put(XMLResource.OPTION_DEFER_IDREF_RESOLUTION, Boolean.TRUE);
+    getDefaultLoadOptions().put(XMLResource.OPTION_USE_DEPRECATED_METHODS, Boolean.TRUE);
+    getDefaultLoadOptions().put(XMLResource.OPTION_USE_PARSER_POOL, parserPool);
+    getDefaultLoadOptions().put(XMLResource.OPTION_USE_XML_NAME_TO_FEATURE_MAP, nameToFeatureMap);
+    getDefaultLoadOptions().put(XMLResource.OPTION_USE_ENCODED_ATTRIBUTE_STYLE, Boolean.TRUE);
+    getDefaultLoadOptions().put(XMLResource.OPTION_RECORD_UNKNOWN_FEATURE, Boolean.TRUE);	}
 
 	/**
-	 * <!-- begin-user-doc -->
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * 
-	 * @see org.eclipse.emf.ecore.xmi.impl.XMLResourceImpl#getEObjectByID(java.lang.String)
-	 * @generated
-	 */
+   * 
+   * @see org.eclipse.emf.ecore.xmi.impl.XMLResourceImpl#getEObjectByID(java.lang.String)
+   * @generated
+   */
 	@Override
 	protected EObject getEObjectByID(String id) {
-		if (idToEObjectMap == null)
-			return super.getEObjectByID(id);
-		return getIDToEObjectMap().get(id);
-	}
+    if (idToEObjectMap == null)
+      return super.getEObjectByID(id);
+    return getIDToEObjectMap().get(id);
+  }
 
 	/**
-	 * <!-- begin-user-doc -->
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * 
-	 * @see org.eclipse.emf.ecore.resource.impl.ResourceImpl#getIntrinsicIDToEObjectMap()
-	 * @generated
-	 */
+   * 
+   * @see org.eclipse.emf.ecore.resource.impl.ResourceImpl#getIntrinsicIDToEObjectMap()
+   * @generated
+   */
 	@Override
 	@SuppressWarnings("unchecked")
 	public Map getIntrinsicIDToEObjectMap() {
-		return getIDToEObjectMap();
-	}
+    return getIDToEObjectMap();
+  }
 
 	/**
-	 * <!-- begin-user-doc -->
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * 
-	 * @see org.eclipse.emf.ecore.xmi.impl.XMLResourceImpl#doUnload()
-	 * @generated
-	 */
+   * 
+   * @see org.eclipse.emf.ecore.xmi.impl.XMLResourceImpl#doUnload()
+   * @generated
+   */
 	@Override
 	protected void doUnload() {
-		super.doUnload();
-		this.idToEObjectMap = null;
-	}
+    super.doUnload();
+    this.idToEObjectMap = null;
+  }
 
 	/**
-	 * <!-- begin-user-doc -->
+   * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-	 * 
-	 * @see org.eclipse.emf.ecore.resource.impl.ResourceImpl#setLoaded()
-	 * @generated
-	 */
+   * 
+   * @see org.eclipse.emf.ecore.resource.impl.ResourceImpl#setLoaded()
+   * @generated
+   */
 	@Override
 	protected Notification setLoaded(boolean isLoaded) {
-		return super.setLoaded(isLoaded);
-	}
+    return super.setLoaded(isLoaded);
+  }
       //end-capella-code
 
 	//end-capella-code
